--- a/src/index.less
+++ b/src/index.less
@@ -11,3 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#root{
+  height: 100%;
+}
+.logo {
+  float: left;
+  width: 120px;
+  height: 31px;
+  margin: 16px 24px 16px 0;
+  background: rgba(255, 255, 255, 0.2);
+}
+.site-layout-background {
+  padding: 24px 0;
+  height: 100%;
+  position: relative;
+}
+
+.site-layout-background-content{
+  background: #fff;
+  height: 100%;
+}
