--- a/src/pages/svg/index.less
+++ b/src/pages/svg/index.less
@@ -1,15 +1,75 @@
 .svg-global{
-display: grid;
+  display: grid;
+  padding:  10px 20px;
   grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-  .svg-item{
-    width: 80px;
-    height: 80px;
-    border: #ccc solid thin;
+  .svg-container{
+    width: 100px;
+    height: 110px;
+    position: relative;
     border-radius: 4px;
-    margin: 16px auto;
+    overflow: hidden;
+    &:hover{
+      .svg-operation{
+        opacity: 1;
+        transform: scale(1);
+        pointer-events: all;
+      }
+    }
+  }
+
+  .svg-content{
+    height: 80px;
+    padding: 22px 32px;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: all 300ms;
+    box-sizing: border-box;
+  }
+  .svg-name{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+  }
+  .svg-operation{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(13,10,49,.9);
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    flex-direction: column;
+    display: flex;
+    opacity: 0;
+    transform: scale(0.8);
+    transition: all 0.14s ease-in;
+    pointer-events: none;
+    li{
+      flex: 1;
+      color: white;
+      font-size: 14px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      &:hover{
+        background: #3d7ad5e6;
+      }
+    }
+  }
+}
+.operate-container{
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  justify-content: space-between;
+  >div{
+    &:last-child{
+      display: flex;
+      gap: 10px;
+    }
   }
 }
